--- a/style.css
+++ b/style.css
@@ -566,6 +566,15 @@ html,body{
 
 
 @media(max-width:1400px){
+  *{
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+  }
+
+  html,body{
+    background: black;
+  }
   .container-aboutme{
     /* background: lightgreen; */
     height: fit-content;
